{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 35,
  "lineage": "71bdfe5a-cae9-5997-2497-eefc4f20aaaa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0071c8c431eea0edb",
            "arn": "arn:aws:ec2:us-east-1:IMLADRIS_ACCOUNT_ID:instance/i-021468c8b2e869038",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021468c8b2e869038",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_lifecycle": "spot",
            "instance_market_options": [
              {
                "market_type": "spot",
                "spot_options": [
                  {
                    "instance_interruption_behavior": "stop",
                    "max_price": "0.163200",
                    "spot_instance_type": "persistent"
                  }
                ]
              }
            ],
            "instance_state": "running",
            "instance_type": "m7g.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08125d367b7c0aeb4",
            "private_dns": "ip-10-0-1-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.51",
            "public_dns": "ec2-3-239-181-146.compute-1.amazonaws.com",
            "public_ip": "3.239.181.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:IMLADRIS_ACCOUNT_ID:key/3651efa1-e0b7-42c7-bd0b-618c8ea7c4f8",
                "tags": {
                  "Backup": "false",
                  "Name": "devbox-root"
                },
                "tags_all": {
                  "Backup": "false",
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Name": "devbox-root",
                  "Project": "aws-devbox"
                },
                "throughput": 250,
                "volume_id": "vol-02aa0cc6b9f4e5476",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "spot_instance_request_id": "sir-969f9spq",
            "subnet_id": "subnet-0c6c82e0eac2ceab0",
            "tags": {
              "Name": "aws-dev-box"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aws-dev-box",
              "Project": "aws-devbox"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-070f4b643d5265c01"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data_base64"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.devbox",
            "aws_sns_topic.devbox",
            "aws_subnet.devbox",
            "aws_vpc.devbox",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.bitwarden_item_login.tailscale",
            "data.bitwarden_item_login.tailscale_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:IMLADRIS_ACCOUNT_ID:internet-gateway/igw-075a139ce9087638e",
            "id": "igw-075a139ce9087638e",
            "owner_id": "IMLADRIS_ACCOUNT_ID",
            "tags": {
              "Name": "devbox-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devbox-igw",
              "Project": "aws-devbox"
            },
            "vpc_id": "vpc-093cd99f6843f2f00"
          },
          "dependencies": [
            "aws_vpc.devbox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:IMLADRIS_ACCOUNT_ID:route-table/rtb-0ffe7e41faaea2390",
            "id": "rtb-0ffe7e41faaea2390",
            "owner_id": "IMLADRIS_ACCOUNT_ID",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-075a139ce9087638e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devbox-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devbox-rt",
              "Project": "aws-devbox"
            },
            "timeouts": null,
            "vpc_id": "vpc-093cd99f6843f2f00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devbox",
            "aws_vpc.devbox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c76e09c1700cd852",
            "route_table_id": "rtb-0ffe7e41faaea2390",
            "subnet_id": "subnet-0c6c82e0eac2ceab0"
          },
          "dependencies": [
            "aws_internet_gateway.devbox",
            "aws_route_table.devbox",
            "aws_subnet.devbox",
            "aws_vpc.devbox",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:IMLADRIS_ACCOUNT_ID:security-group/sg-070f4b643d5265c01",
            "description": "Security group for devbox instance - no public ingress, Tailscale handles access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070f4b643d5265c01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devbox-sg",
            "name_prefix": "",
            "owner_id": "IMLADRIS_ACCOUNT_ID",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devbox-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devbox-sg",
              "Project": "aws-devbox"
            },
            "timeouts": null,
            "vpc_id": "vpc-093cd99f6843f2f00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devbox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:IMLADRIS_ACCOUNT_ID:subnet/subnet-0c6c82e0eac2ceab0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6c82e0eac2ceab0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "IMLADRIS_ACCOUNT_ID",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devbox-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devbox-subnet",
              "Project": "aws-devbox"
            },
            "vpc_id": "vpc-093cd99f6843f2f00"
          },
          "dependencies": [
            "aws_vpc.devbox",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:IMLADRIS_ACCOUNT_ID:vpc/vpc-093cd99f6843f2f00",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba3c57efc32596b8",
            "default_route_table_id": "rtb-01b02dae4a2122df9",
            "default_security_group_id": "sg-01d42e38b900f645d",
            "dhcp_options_id": "dopt-037ca9a336b984d3f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-093cd99f6843f2f00",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b02dae4a2122df9",
            "owner_id": "IMLADRIS_ACCOUNT_ID",
            "tags": {
              "Name": "devbox-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devbox-vpc",
              "Project": "aws-devbox"
            }
          }
        }
      ]
    }
  ]
}